@@ -419,6 +419,9 @@ ILboolean ilLoadTargaL(const void *Lump, ILuint Size);
 ILboolean ilSaveTarga(ILconst_string FileName);
 ILuint    ilSaveTargaF(ILHANDLE File);
 ILuint    ilSaveTargaL(void *Lump, ILuint Size);
+ILboolean ilLoadTexture(ILconst_string FileName);
+ILboolean ilLoadTextureF(ILHANDLE File);
+ILboolean ilLoadTextureL(const void *Lump, ILuint Size);
 ILboolean ilIsValidTiff(ILconst_string FileName);
 ILboolean ilIsValidTiffF(ILHANDLE File);
 ILboolean ilIsValidTiffL(const void *Lump, ILuint Size);
